--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
     <title>BookStore</title>
 </head>
 <body>
     <h1>Wellcome to My BookStore</h1>
-    <a href="/pshell.pdf">PowerShell for professionals</a>
+    <a href="pshell.pdf">PowerShell for professionals</a>
 </body>
 </html>
