--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>BookStore</title>
 </head>
 <body>
-    <h1>Wellcome to My BookStore</h1>
+    <h1>Wellcome to BookStore</h1>
     <a href="pshell.pdf">PowerShell for professionals</a>
 </body>
 </html>
