--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>Wellcome to BookStore</h1>
     <a href="pshell.pdf">PowerShell for professionals</a>
+    <a href="PythonNotesForProfessionals.pdf">Python for professionals</a>
 </body>
 </html>
