--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>BookStore</title>
 </head>
 <body>
-    h1>Wellcome to BookStore</h1>
+    <h1>Wellcome to BookStore</h1>
     <a href="pshell.pdf">PowerShell for professionals</a><br/><br/>
     <a href="PythonNotesForProfessionals.pdf">Python for professionals</a><br/><br/>
     <form action="#" method="post">
