--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" type="text/css">
     <title>BookStore</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
     <a href="PythonNotesForProfessionals.pdf">Python for professionals</a><br/><br/>
     <form action="#" method="post">
     <input type="text" name="email" required="required" placeholder="Please enter your email" autofocus required></input>
-    <input type="submit" title="Subscribe" name="sub" value="Subscribe"></input>
+    <input type="submit" title="Subscribe" name="sub" value="Subscribe"/>
     </form>
 </body>
 </html>
