--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
 </head>
 <body>
     <h1>Wellcome to BookStore</h1>
-    <a href="pshell.pdf">PowerShell for professionals</a><br/><br/>
-    <a href="PythonNotesForProfessionals.pdf">Python for professionals</a><br/><br/>
+    <ul type="circle">
+    <hr width="100%" color="red"/>
+    <hr width="100%" color="blue"/>
+    <hr width="100%" color="red"/><br>
+    <li><a href="pshell.pdf">PowerShell for professionals</a></li><br/>
+    <li><a href="PythonNotesForProfessionals.pdf">Python for professionals</a></li><br/>
+    <li><a href="CNotesForProfessionals.pdf">C for professionals</a></li><br>
+    <li><a href="CSSNotesForProfessionals.pdf">CSS for professionals</a></li><br>
+    <li><a href="JavaScriptNotesForProfessionals.pdf">JavaScript for professionals</a></li><br>
+    <li><a href="HTML5CanvasNotesForProfessionals.pdf">HTML5Canvass for professionals</a></li><br>
+    </ul>
     <form action="#" method="post">
-    <input type="text" name="email" required="required" placeholder="Please enter your email" autofocus required></input>
-    <input type="submit" title="Subscribe" name="sub" value="Subscribe"/>
+        <a href="davannsmart9@gmail.com"><button style="color:rgb(255, 0, 0);text-align:center;">Contact</button></a>
     </form>
 </body>
 </html>
