--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <li><a href="HTML5CanvasNotesForProfessionals.pdf">HTML5Canvass for professionals</a></li><br>
     </ul>
     <form action="#" method="post">
-        <button style="color:rgb(255, 0, 0);text-align:center;"><a href="mailto:davannsmart9@gmail.com"></a>Contact</button>
+        <a href="mailto:davannsmart9@gmail.com"><button style="color:rgb(255, 0, 0);text-align:center;"></a>Contact</button></a>
     </form>
 </body>
 </html>
