--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>BookStore</title>
 </head>
 <body>
-    <h1>Wellcome to BookStore</h1>
+    <h1>BookStore</h1>
     <ul type="circle">
     <hr width="100%" color="red"/>
     <hr width="100%" color="blue"/>
