--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     </ul>
     <h2>My Software</h2>
     <ul type="circle">
-        <li><a href="dateofday.jar">Date Of Day (jar)</a></li>
-        <li><a href="CodeOfDay.exe">Date Of Day (exe)</a></li>
-        <li><a href="Convertor.exe">Convertint System Number (exe)</a></li>
+        <li><a href="dateofday.jar">Date Of Day (jar) ->Java</a></li>
+        <li><a href="CodeOfDay.exe">Date Of Day (exe) ->C#</a></li>
+        <li><a href="Convertor.exe">Converting System Number (exe) ->C#</a></li>
     </ul>
     <form action="#" method="post">
         <a href="mailto:davannsmart9@gmail.com" style="color:blue">Contact to Mail</a>
