--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
 <body>
     <h1>BookStore</h1>
     <ul type="circle">
+    <div>
     <hr width="100%" color="red"/>
     <hr width="100%" color="blue"/>
     <hr width="100%" color="red"/><br>
+    </div>
     <li><a href="pshell.pdf">PowerShell for professionals</a></li><br/>
     <li><a href="PythonNotesForProfessionals.pdf">Python for professionals</a></li><br/>
     <li><a href="CNotesForProfessionals.pdf">C for professionals</a></li><br>
     <li><a href="CSSNotesForProfessionals.pdf">CSS for professionals</a></li><br>
     <li><a href="JavaScriptNotesForProfessionals.pdf">JavaScript for professionals</a></li><br>
     <li><a href="HTML5CanvasNotesForProfessionals.pdf">HTML5Canvass for professionals</a></li><br>
+    <li><a href="HTML5NotesForProfessionals.pdf">HTML5 for professionals</a></li><br>
     </ul>
     <h2>My Software</h2>
     <ul type="circle">
@@ -29,5 +32,6 @@
     <form action="#" method="post">
         <a href="mailto:davannsmart9@gmail.com" style="color:blue">Contact to Mail</a>
     </form>
+    
 </body>
 </html>
