--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>BookStore</title>
 </head>
 <body>
-    <h1>BookStore</h1>
+    <marquee behavior="alternate" direction="right" width="auto" height="auto" loop="-5">
+        <h1>BookStore</h1>
+    </marquee>
     <ul type="circle">
     <div>
     <hr width="100%" color="red"/>
@@ -32,6 +34,6 @@
     <form action="#" method="post">
         <a href="mailto:davannsmart9@gmail.com" style="color:blue">Contact to Mail</a>
     </form>
-    
+
 </body>
 </html>
