--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <marquee behavior="alternate" direction="right" width="auto" height="auto" loop="-5">
-        <div>BookStore</div>
+        <div id="header">BookStore</div>
     </marquee>
     <ul type="circle">
     <div>
